@@ -1,3 +1,7 @@
+2008-05-23	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* New feature: remove postVar segment completely if it it produces only empty values
+
 2008-05-14	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed bug #8406: config.absRefPrefix crashes realurl
